--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@ const mediumQuotes = [
   "Do what you love, love what you do, and stay passionate.",
   "Every day is a second chance to get things right.",
   "Your attitude determines your direction and your success in life.",
-  "Don’t count the days, make the days count.",
+  "Don't count the days, make the days count.",
   "Great things never come from comfort zones; embrace the challenge.",
   "Focus on progress, not perfection, and celebrate small wins.",
   "The best way to predict the future is to create it.",
   "Mistakes are proof that you are trying and learning.",
   "Opportunities are often disguised as hard work; embrace them.",
-  "Believe you can, and you’re already halfway there.",
+  "Believe you can, and you're already halfway there.",
   "Persistence and patience are keys to achieving meaningful goals.",
   "Life begins at the end of your comfort zone.",
   "Do not wait for opportunities; create them yourself.",
@@ -112,7 +112,7 @@ const mediumQuotes = [
   "Success is walking from failure to failure without losing enthusiasm.",
   "You are stronger than you think and braver than you feel.",
   "The smallest step forward is better than no step at all.",
-  "Dreams don’t work unless you do the work yourself.",
+  "Dreams don't work unless you do the work yourself.",
   "Focus on what you can control and release the rest.",
   "Hardships often prepare ordinary people for extraordinary destinies.",
   "Do not fear change; it is the only constant.",
@@ -125,30 +125,30 @@ const longQuotes = [
   "The greatest glory in living lies not in never falling, but in rising every time we fall and learning from each experience along the way.",
   "Life is about making an impact, not making an income. Focus on meaningful work and relationships, and the rest will naturally follow as a result of your actions.",
   "Success is not final, failure is not fatal: It is the courage to continue that counts, because perseverance in the face of adversity defines true achievement.",
-  "Don’t be pushed around by the fears in your mind. Be led by the dreams in your heart and the values that define who you truly are.",
-  "In the middle of difficulty lies opportunity, and those who are willing to embrace challenges with a positive mindset often discover strength they didn’t know they had.",
+  "Don't be pushed around by the fears in your mind. Be led by the dreams in your heart and the values that define who you truly are.",
+  "In the middle of difficulty lies opportunity, and those who are willing to embrace challenges with a positive mindset often discover strength they didn't know they had.",
   "Happiness is not something ready made. It comes from your own actions, choices, and mindset. Cultivate gratitude, kindness, and resilience to create lasting joy in life.",
-  "Your time is limited, so don’t waste it living someone else’s life. Pursue your passions, honour your values, and focus on what truly matters to you.",
+  "Your time is limited, so don't waste it living someone else's life. Pursue your passions, honour your values, and focus on what truly matters to you.",
   "The best way to achieve your dreams is to break them into small, actionable steps, take consistent action every day, and remain persistent despite setbacks or obstacles.",
-  "Life isn’t about waiting for the storm to pass. It’s about learning to dance in the rain and finding joy in every moment, no matter the circumstances.",
+  "Life isn't about waiting for the storm to pass. It's about learning to dance in the rain and finding joy in every moment, no matter the circumstances.",
   "Do not judge your progress by the progress of others. Focus on your journey, celebrate your milestones, and trust the process that shapes your unique path.",
-  "Everything you’ve ever wanted is on the other side of fear. Embrace challenges, take risks, and push beyond self-imposed limitations to achieve your fullest potential.",
+  "Everything you've ever wanted is on the other side of fear. Embrace challenges, take risks, and push beyond self-imposed limitations to achieve your fullest potential.",
   "Motivation is what gets you started, but habit is what keeps you going. Build daily routines that align with your goals and consistently reinforce them over time.",
   "The only way to do great work is to love what you do. Passion, focus, and dedication are the foundation for meaningful accomplishments and long-term success.",
   "Life is a journey, not a destination. Learn from every experience, cherish relationships, and embrace personal growth to cultivate a life filled with purpose and fulfilment.",
   "Do not go where the path may lead; go instead where there is no path and leave a trail. Originality and courage often create the most lasting impact.",
   "Strive not to be a success, but rather to be of value. Contribution, integrity, and service to others leave a legacy far greater than personal accolades.",
-  "Challenges are gifts that force us to search for a new centre of gravity. Don’t resist them; find opportunity within adversity and grow stronger through perseverance.",
+  "Challenges are gifts that force us to search for a new centre of gravity. Don't resist them; find opportunity within adversity and grow stronger through perseverance.",
   "Your mindset is a powerful tool. Cultivate positivity, resilience, and focus, and you can overcome obstacles that once seemed insurmountable, turning them into opportunities for growth.",
   "Do not let yesterday take up too much of today. Learn, adjust, and move forward with courage, because every new day provides a fresh chance to improve.",
-  "Life is what happens when you’re busy making other plans. Stay present, embrace uncertainty, and focus on meaningful connections, experiences, and the pursuit of your goals.",
-  "You can’t go back and change the beginning, but you can start where you are and change the ending. Take responsibility for your choices and actions today.",
-  "Great achievements often require patience, perseverance, and consistent effort. Focus on what you can control, keep learning, and don’t be discouraged by temporary setbacks along the way.",
+  "Life is what happens when you're busy making other plans. Stay present, embrace uncertainty, and focus on meaningful connections, experiences, and the pursuit of your goals.",
+  "You can't go back and change the beginning, but you can start where you are and change the ending. Take responsibility for your choices and actions today.",
+  "Great achievements often require patience, perseverance, and consistent effort. Focus on what you can control, keep learning, and don't be discouraged by temporary setbacks along the way.",
   "Believe in yourself and all that you are. Know that there is something inside you greater than any obstacle, and let your determination guide you toward success.",
   "Success is not measured by wealth or fame, but by the positive impact you have on others, the legacy you leave, and the personal growth you achieve along the way.",
   "Happiness is when what you think, what you say, and what you do are in harmony. Align your values with your actions to experience lasting fulfilment.",
   "The mind is everything. What you think, you become. Cultivate positive thoughts, take meaningful action, and embrace challenges as opportunities to grow, learn, and achieve your dreams.",
-  "Don’t count the days; make the days count. Approach each day with purpose, intention, and action, and your consistent efforts will yield extraordinary results over time.",
+  "Don't count the days; make the days count. Approach each day with purpose, intention, and action, and your consistent efforts will yield extraordinary results over time.",
   "An unexamined life is not worth living. Reflect on your choices, learn from mistakes, and strive to live intentionally, guided by values, purpose, and meaningful goals.",
   "Everything you can imagine is real. Ideas, combined with consistent action, courage, and determination, have the power to shape your life and turn possibilities into reality."
 ];
